fixed line spacing

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -18,7 +18,7 @@ html, body, header, nav, ul, li, h2, a,form{
   border: 0;
   padding: 0;
   font: inherit;
-  font-family: serif, sans-serif;
+  font-family:  sans-serif;
 vertical-align: baseline;
 }
 
@@ -465,4 +465,5 @@ main.post-article{
 }
 .post-body{
     padding:20px;
+    line-height: 130%;
 }
